--- a/views/thankyou.html
+++ b/views/thankyou.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form submitted</title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" type="image/x-icon" href="/images/icons8-sign-50.png">
 </head>
 <body>
     <h1>Form submitted. thank you!</h1>
 </body>
+<footer>
+    <br>
+    <br>
+    <a target="_blank" href="https://icons8.com/icon/8190/sign-up">Sign</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+</footer>
 </html>
