--- a/views/home.html
+++ b/views/home.html
@@ -51,23 +51,20 @@
                 </label>
             </div>
 
-            <div id="bottom">
-                <label>Message
-                    <input type="text" name="message">
-                </label>
+            <label id="message">Message   
+                <input type="text" name="message">
+            </label>
 
-                <label>Please add me to your mailing list
-                    <input type="checkbox" name="mailinglist">
-                    
-                </label>
+            <label id="mailing">Please add me to your mailing list
+                <input type="checkbox" name="mailinglist">
+                
+            </label>
 
-                <label>Choose an email format:
-                    <input type="radio" name="htmlradio">
-                    HTML
-                    <input type="radio" name="textradio">
-                    Text
-                </label>
-            </div>
+            <label id="emailformat">Choose an email format:
+                <input type="radio" name="htmlradio">
+                HTML
+                <input type="radio" name="textradio">                    Text
+            </label>
         </fieldset>
 
         <button type="submit">Submit</button>
