--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,37 +1,67 @@
 body
 {
     font-family: Arial, Helvetica, sans-serif;
+    margin-top:20px;
+    margin-left:400px;
+    margin-right: 400px;
+    margin-bottom:20px;
+}
+
+fieldset
+{
+    display:flex;
+    flex-direction: column;
 }
 
 h1
 {
-    color:darkgreen;
     text-align: center;
 }
 
-/*#top
+#top
 {
-    width:33%;
-    border:solid 2px red;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+#top > label
+{
+    width:30%;
 }
 
 #mid
 {
-    width:50%;
-    border:solid 2px blue;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
-#bottom
+#message
 {
-    width:100%;
-    border:solid 2px green;
-}*/
+    display:flex;
+    justify-content: left;
+}
 
-input, select
+#mailing
 {
-    box-sizing: border-box;
-    margin: 2px;
-    width:100%;
+    display: flex;
+}
+
+#emailformat
+{
+    display:flex;
+}
+
+label
+{
+    margin:5px;
+}
+
+input
+{
+    display:flex;
+    align-items: center;
 }
 
 button
