--- a/views/home.html
+++ b/views/home.html
@@ -60,19 +60,22 @@
                 
             </label>
 
-            <label id="emailformat">Choose an email format:
-                <input type="radio" name="htmlradio">
-                HTML
-                <input type="radio" name="textradio">                    Text
+            <fieldset>Choose an email format:
+            <label class="emailformat">
+                <input type="radio" name="htmlradio">HTML
             </label>
+            <label class="emailformat">
+                <input type="radio" name="textradio">Text
+            </label>
+            </fieldset>
         </fieldset>
 
         <button type="submit">Submit</button>
     </form>
+    <footer>
+        <br>
+        <br>
+        <a target="_blank" href="https://icons8.com/icon/8190/sign-up">Sign</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+    </footer>
 </body>
-<footer>
-    <br>
-    <br>
-    <a target="_blank" href="https://icons8.com/icon/8190/sign-up">Sign</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
-</footer>
 </html>
