progressing on css fix

--- a/views/home.html
+++ b/views/home.html
@@ -8,9 +8,9 @@
     <link rel="icon" type="image/x-icon" href="/images/icons8-sign-50.png">
 </head>
 <body>
-    <h1>My Guestbook Form</h1>
     <form action="/thankyou" method="post">
         <fieldset>
+            <h1>My Guestbook Form</h1>
             <div id="top">
                 <label>First Name
                     <input type="text" name="fname">
@@ -37,6 +37,7 @@
                 </label>
             </div>
 
+            <!--
             <div id="mid">
                 <label>How did we meet?
                     <select name="howwemet">
@@ -60,17 +61,17 @@
                 
             </label>
 
-            <fieldset>Choose an email format:
+            <p>Choose an email format:</p>
             <label class="emailformat">
                 <input type="radio" name="htmlradio">HTML
             </label>
+
             <label class="emailformat">
                 <input type="radio" name="textradio">Text
             </label>
-            </fieldset>
-        </fieldset>
-
+        -->
         <button type="submit">Submit</button>
+        </fieldset>
     </form>
     <footer>
         <br>
