--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,16 +1,10 @@
 body
 {
     font-family: Arial, Helvetica, sans-serif;
-    margin-top:20px;
-    margin-left:400px;
-    margin-right: 400px;
-    margin-bottom:20px;
-}
-
-fieldset
-{
-    display:flex;
-    flex-direction: column;
+    width: 70%;
+    margin: 0 auto 1rem auto;
+    padding: 1rem 1rem 2rem 1rem;
+    background-color: rgb(240, 240, 240);
 }
 
 h1
@@ -18,61 +12,52 @@ h1
     text-align: center;
 }
 
-#top
-{
-    display:flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-#top > label
-{
-    width:30%;
-}
-
-#mid
-{
-    display:flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-#message
-{
-    display:flex;
-    justify-content: left;
-}
-
-#mailing
-{
-    display: flex;
-}
-
-.emailformat
-{
-    display:flex;
-}
-
-label
-{
-    margin:5px;
-}
-
-input
-{
-    display:flex;
-    align-items: center;
-}
-
 button
 {
-    padding:10px;
-    margin:2px;
+    padding:8px;
+    margin:15px 0 0 0;
+    width:6%;
     color: white;
-    background-color: green;
+    background-color: rgb(102, 177, 102);
+    border-radius: 5px;
+    border:0;
 }
 
 footer
 {
     font-size:8px;
+}
+
+label
+{
+    font-weight: bold;
+}
+
+fieldset
+{
+    border-radius: 5px;
+    border: 0;
+    box-shadow: 0 0 5px rgb(218, 218, 218);
+    background-color: white;
+}
+
+input
+{
+    border-radius: 2px;
+    border: 0;
+    box-shadow: 0 0 2px rgb(196, 196, 196);
+    height: 1.5em;
+}
+
+label
+{
+    display:flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+#top
+{
+    display:flex;
+    justify-content: space-around;
 }
