--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,49 +1,103 @@
 body
 {
     font-family: Arial, Helvetica, sans-serif;
-    margin-top:20px;
-    margin-left:400px;
-    margin-right: 400px;
-    margin-bottom:20px;
-}
-
-fieldset
-{
-    display:flex;
-    flex-direction: column;
+    width: 50%;
+    margin: 0 auto 1rem auto;
+    padding: 1rem 1rem 2rem 1rem;
+    background-color: rgb(240, 240, 240);
 }
 
 h1
 {
     text-align: center;
+    width:100%;
 }
 
-#top
+button
+{
+    padding:8px;
+    margin:15px 0 0 0;
+    width:6%;
+    color: white;
+    background-color: rgb(102, 177, 102);
+    border-radius: 5px;
+    border:0;
+}
+
+label
+{
+    display: block;
+    font-weight: bold;
+}
+
+fieldset
 {
     display:flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    gap:10px;
+    border-radius: 5px;
+    border: 0;
+    box-shadow: 0 0 5px rgb(218, 218, 218);
+    background-color: white;
 }
 
-#top > label
+input
 {
+    border-radius: 2px;
+    border: 0;
+    box-shadow: 0 0 2px rgb(196, 196, 196);
+    width:100%;
+    height:2em;
+}
+
+.top-group
+{
+    display:flex;
+    flex-direction: column;
     width:30%;
+    padding:10px;
 }
 
-#mid
+.mid-group
 {
     display:flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    flex-direction: column;
+    width:46%;
+    padding:10px;
 }
 
-#message
+select
 {
-    display:flex;
-    justify-content: left;
+    border-radius: 2px;
+    border: 0;
+    box-shadow: 0 0 2px rgb(196, 196, 196);
+    height: 2.5em;
+    width:100%;
+}
+
+.message
+{
+    width:100%;
+}
+
+.message input
+{
+    height:5em;
 }
 
 #mailing
+{
+    width:5%;
+    height:5%;
+}
+
+.mailing-group
+{
+    width: 100%;
+}
+
+.mailing-group label
 {
     display: flex;
 }
@@ -51,28 +105,11 @@ h1
 .emailformat
 {
     display:flex;
+    width:100%;
 }
 
-label
+.radios
 {
-    margin:5px;
-}
-
-input
-{
-    display:flex;
-    align-items: center;
-}
-
-button
-{
-    padding:10px;
-    margin:2px;
-    color: white;
-    background-color: green;
-}
-
-footer
-{
-    font-size:8px;
+    width:40%;
+    height:40%;
 }
