--- a/views/thankyou.html
+++ b/views/thankyou.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form submitted</title>
+    <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="icon" type="image/x-icon" href="/images/icons8-sign-50.png">
 </head>
 <body>
     <h1>Form submitted. thank you!</h1>
+    <button id="backBtn">Go Back</button>
 </body>
 <footer>
     <br>
