added confirmation page, submissions array, admin page

--- a/views/home.html
+++ b/views/home.html
@@ -9,7 +9,7 @@
     
 </head>
 <body>
-    <form action="/thankyou" method="post">
+    <form action="/submit-order" method="post">
         
         <fieldset>
             <h1>My Guestbook Form</h1>
