--- a/views/thankyou.html
+++ b/views/thankyou.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form submitted</title>
-    <script src="script.js" defer></script>
+    <script src="/script.js" defer></script>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="icon" type="image/x-icon" href="/images/icons8-sign-50.png">
 </head>
 <body>
-    <h1>Form submitted. thank you!</h1>
-    <button id="backBtn">Go Back</button>
+    <h1>Form submitted. Thank you!</h1>
+    <div class="backDiv">
+        <button id="backBtn">Back</button>
+    </div>
 </body>
 <footer>
     <br>
