--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -113,3 +113,14 @@ select
     width:10px;
     height:10px;
 }
+
+.backDiv
+{
+    display:flex;
+    justify-content: center;
+}
+
+.backDiv #backBtn
+{
+    margin:50px;
+}
