guestbook p3 complete - admin page link, ejs, etc.

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -130,3 +130,10 @@ select
     color: rgb(143, 0, 0);
     text-align: center;
 }
+
+#adminLink
+{
+    cursor: pointer;
+    text-decoration: underline;
+    color: blue;
+}
