--- a/views/invalid-submission.ejs
+++ b/views/invalid-submission.ejs
@@ -14,10 +14,13 @@
     <div class="backDiv">
         <button id="backBtn">Back</button>
     </div>
+    <footer>
+        <br>
+        <div class="adminLinkDiv">
+            <a id="adminLink">Admin Page</a>
+        </div>
+        <br>
+        <a target="_blank" href="https://icons8.com/icon/8190/sign-up">Sign</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+    </footer>
 </body>
-<footer>
-    <br>
-    <br>
-    <a target="_blank" href="https://icons8.com/icon/8190/sign-up">Sign</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
-</footer>
 </html>
