--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio: Guestbook</title>
+    <script src="/script.js" defer></script>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="icon" type="image/x-icon" href="/images/icons8-sign-50.png">
     
@@ -60,9 +61,9 @@
                 <label>
                     How did we meet?
                     <select name="howwemet">
-                        <option value="School">Classroom</option>
-                        <option value="School">Job Fair</option>
-                        <option value="School">Meetup</option>
+                        <option value="Classroom">Classroom</option>
+                        <option value="Job_Fair">Job Fair</option>
+                        <option value="Meetup">Meetup</option>
                     </select>
                 </label>
             </div>
@@ -88,13 +89,13 @@
             </div>
 
             <div class="emailformat">
-                <label class="emailformat">
+                <label>
                     Choose an email format:
-                    <input type="radio" name="htmlradio" class="radios">HTML
+                    <input type="radio" name="emailformat" value="HTML" class="radios">HTML
                 </label>
              
-                <label class="emailformat">
-                    <input type="radio" name="textradio" class="radios">Text
+                <label>
+                    <input type="radio" name="emailformat" value="Text" class="radios">Text
                 </label>
             </div>
             <button type="submit">Submit</button>
@@ -103,6 +104,9 @@
     </form>
     <footer>
         <br>
+        <div class="adminLinkDiv">
+            <a id="adminLink">Admin Page</a>
+        </div>
         <br>
         <a target="_blank" href="https://icons8.com/icon/8190/sign-up">Sign</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
     </footer>
