guestbook part 4 changes, added sql database

--- a/views/submission-summary.ejs
+++ b/views/submission-summary.ejs
@@ -26,7 +26,7 @@
             <p><strong>Message:</strong> <%= submissions[i].message %></p>
             <p><strong>Mailing List:</strong> <%= submissions[i].mailinglist %></p>
             <p><strong>Email Format:</strong> <%= submissions[i].emailformat %></p>
-            <p><strong>Submission Date & Time:</strong> <%= submissions[i].timestamp %></p>
+            <p><strong>Submission Date & Time:</strong> <%= submissions[i].time_stamp %></p>
             <hr>
         <% } %>
     <% } %>
